--- a/.eslintrc
+++ b/.eslintrc
@@ -8,10 +8,12 @@
     "env": {
       "browser": true,
       "node": true,
+      "es6": true
     },
     "extends": [
       "eslint:recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "plugin:react/recommended"
     ],
     "rules": {
       "no-console": "error"
