component lifeCycle issue

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
       "plugin:react/recommended"
     ],
     "rules": {
-      "no-console": "error"
+      "no-console": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
   }
