--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,6 @@
     "rules": {
       "no-console": "off",
       "react/react-in-jsx-scope": "off",
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     }
   }
