--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,6 @@
     ],
     "rules": {
       "no-console": "off",
-      "react/react-in-jsx-scope": "off",
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+      //"react/prop-types": "off"
     }
   }
